feat: add new colors to the main menu

--- a/index.html
+++ b/index.html
@@ -2,114 +2,108 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style_margin.css">
-    <link rel="stylesheet" href="./css/header.css">
-    <title>Técnicas de alineamiento</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/style_margin.css">
+  <link rel="stylesheet" href="./css/main-menu.css">
+
+  <link rel="stylesheet" href="./css/header.css">
+  <title>Técnicas de alineamiento</title>
 </head>
 
 <body>
-    <div class="header">
-        <img src="src/img/palettes.png" alt="logo">
-        <p>Técnicas de alineamiento 💚</p>
-        <span class="icon">•••</span>
-    </div>
+  <div class="header">
+    <img src="src/img/palettes.png" alt="logo">
+    <p>Técnicas de alineamiento 💚</p>
+    <span class="icon">•••</span>
+  </div>
 
-    <div class="container_menu">
-        <form action="./pages/grid_margin.html">
-            <input class="button_submit" type="submit" value="Margin" />
-        </form>
+  <div class="container_menu">
+    <form action="./pages/grid_margin.html">
+      <input class="button_submit" type="submit" value="Margin" />
+    </form>
 
-        <form action="./pages/line-height.html">
-            <input class="button_submit" type="submit" value="Line-height" />
-        </form>
+    <form action="./pages/line-height.html">
+      <input class="button_submit" type="submit" value="Line-height" />
+    </form>
 
-        <form action="./pages/table-cell.html">
-            <input class="button_submit" type="submit" value="Table cell" />
-        </form>
+    <form action="./pages/table-cell.html">
+      <input class="button_submit" type="submit" value="Table cell" />
+    </form>
 
-        <form action="./pages/positions.html">
-            <input class="button_submit" type="submit" value="Positions" />
-        </form>
+    <form action="./pages/positions.html">
+      <input class="button_submit" type="submit" value="Positions" />
+    </form>
 
-        <form action="./pages/modes_challenge.html">
-            <input class="button_submit" type="submit" value="Writing modes challenge" />
-        </form>
+    <form action="./pages/modes_challenge.html">
+      <input class="button_submit" type="submit" value="Writing modes challenge" />
+    </form>
 
-        <form action="./pages/flexbox.html">
-            <input class="button_submit" type="submit" value="Flexbox" />
-        </form>
+    <form action="./pages/flexbox.html">
+      <input class="button_submit" type="submit" value="Flexbox" />
+    </form>
 
-        <form action="./pages/drawing.html">
-            <input class="button_submit" type="submit" value="Happy character drawing" />
-        </form>
+    <form action="./pages/drawing.html">
+      <input class="button_submit" type="submit" value="Happy character drawing" />
+    </form>
 
-        <form action="./pages/content_item.html">
-            <input class="button_submit" type="submit" value="Immediate parents & children">
-        </form>
+    <form action="./pages/content_item.html">
+      <input class="button_submit" type="submit" value="Immediate parents & children">
+    </form>
 
-        <form action="./pages/layout-grid.html">
-            <input class="button_submit" type="submit" value="Layout grid">
-        </form>
+    <form action="./pages/display.html">
+      <input class="button_submit" type="submit" value="Display grid or inline-grid">
+    </form>
 
-        <form action="./pages/display.html">
-            <input class="button_submit" type="submit" value="Display grid or inline-grid">
-        </form>
+    <form action="./pages/column-rows.html">
+      <input class="button_submit" type="submit" value="Columns and rows">
+    </form>
 
-        <form action="./pages/column-rows.html">
-            <input class="button_submit" type="submit" value="Columns and rows">
-        </form>
+    <form action="./pages/justify-content.html">
+      <input class="button_submit" type="submit" value="Justify-content">
+    </form>
 
-        <form action="./pages/justify-content.html">
-            <input class="button_submit" type="submit" value="Justify-content">
-        </form>
+    <form action="./pages/align-content.html">
+      <input class="button_submit" type="submit" value="Align-content">
+    </form>
 
-        <form action="./pages/align-content.html">
-            <input class="button_submit" type="submit" value="Align-content">
-        </form>
+    <form action="./pages/quiz-place-content.html">
+      <input class="button_submit" type="submit" value="Place-content">
+    </form>
 
-        <form action="./pages/quiz-place-content.html">
-            <input class="button_submit" type="submit" value="Place-content">
-        </form>
+    <form action="./pages/location.html">
+      <input class="button_submit" type="submit" value="Location">
+    </form>
 
-        <form action="./pages/location.html">
-            <input class="button_submit" type="submit" value="Location">
-        </form>
+    <form action="./pages/minmax.html">
+      <input class="button_submit" type="submit" value="Function">
+    </form>
 
-        <form action="./pages/minmax.html">
-            <input class="button_submit" type="submit" value="Function">
-        </form>
+    <form action="./pages/main-grid.html">
+      <input class="button_submit" type="submit" value="Main grid">
+    </form>
 
-        <form action="./pages/main-grid.html">
-            <input class="button_submit" type="submit" value="Main grid">
-        </form>
+    <form action="./pages/auto-fill-fit.html">
+      <input class="button_submit" type="submit" value="Auto-fill vs auto-fit">
+    </form>
 
-        <form action="./pages/auto-fill-fit.html">
-            <input class="button_submit" type="submit" value="Auto-fill vs auto-fit">
-        </form>
+    <form action="./pages/tracks.html">
+      <input class="button_submit" type="submit" value="Tracks">
+    </form>
 
-        <form action="./pages/project.html">
-            <input class="button_submit" type="submit" value="Project">
-        </form>
+    <form action="./pages/justify-self.html">
+      <input class="button_submit" type="submit" value="Alignment justify-self">
+    </form>
 
-        <form action="./pages/tracks.html">
-            <input class="button_submit" type="submit" value="Tracks">
-        </form>
+    <form action="./pages/align-self.html">
+      <input class="button_submit" type="submit" value="Alignment align-self">
+    </form>
 
-        <form action="./pages/justify-self.html">
-            <input class="button_submit" type="submit" value="Alignment justify-self">
-        </form>
-
-        <form action="./pages/align-self.html">
-            <input class="button_submit" type="submit" value="Alignment align-self">
-        </form>
-
-        <form action="./pages/place-self.html">
-            <input class="button_submit" type="submit" value="Alignment place-self">
-        </form>
-    </div>
+    <form action="./pages/place-self.html">
+      <input class="button_submit" type="submit" value="Alignment place-self">
+    </form>
+  </div>
 </body>
 
 </html>
