feat: add padding to the sides of the content

--- a/pages/modes_challenge.html
+++ b/pages/modes_challenge.html
@@ -2,42 +2,43 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/mode_challenge.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <title>Alignment techniques</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../css/mode_challenge.css">
+  <link rel="stylesheet" href="../css/mode_challenge_mq.css">
+  <link rel="stylesheet" href="../css/header.css">
+  <title>Alignment techniques</title>
 </head>
 
 <body>
-    <div class="header">
-        <img src="../src/img/palettes.png" alt="logo">
-        <p>Writing modes challeng 💚</p>
-        <span class="icon">•••</span>
+  <div class="header">
+    <img src="../src/img/palettes.png" alt="logo">
+    <p>Writing modes challeng 💚</p>
+    <span class="icon">•••</span>
+  </div>
+
+  <div class="container">
+    <div class="card">
+      <div class="card__header">Curso de CSS Grid</div>
+      <div class="card__main">Nuevo</div>
     </div>
 
-    <div class="container">
-        <div class="card">
-            <div class="card__header">Curso de CSS Grid</div>
-            <div class="card__main">Nuevo</div>
-        </div>
-
-        <div class="card_alignments">
-            <div class="card__header">Curso de CSS Grid</div>
-            <div class="card__main">Nuevo</div>
-        </div>
-
-        <div class="card_alignments_three">
-            <div class="card__header">Curso de CSS Grid</div>
-            <div class="card__main">Nuevo</div>
-        </div>
-
-        <div class="card_alignments_four">
-            <div class="card__header">Curso de CSS Grid</div>
-            <div class="card__main">Nuevo</div>
-        </div>
+    <div class="card_alignments">
+      <div class="card__header">Curso de CSS Grid</div>
+      <div class="card__main">Nuevo</div>
     </div>
+
+    <div class="card_alignments_three">
+      <div class="card__header">Curso de CSS Grid</div>
+      <div class="card__main">Nuevo</div>
+    </div>
+
+    <div class="card_alignments_four">
+      <div class="card__header">Curso de CSS Grid</div>
+      <div class="card__main">Nuevo</div>
+    </div>
+  </div>
 </body>
 
 </html>
