feat: add a new icon to the header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="header">
     <img src="src/img/palettes.png" alt="logo">
-    <p>Técnicas de alineamiento 💚</p>
+    <p>Técnicas de alineamiento ♥️</p>
     <span class="icon">•••</span>
   </div>
 
