--- a/pages/align-content.html
+++ b/pages/align-content.html
@@ -2,100 +2,100 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/align-content.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <title>Alignment alight-content</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../css/align-content.css">
+  <link rel="stylesheet" href="../css/header.css">
+  <title>Alignment alight-content</title>
 </head>
 
 <body>
-    <div class="header">
-        <img src="../src/img/palettes.png" alt="logo">
-        <p>Alignment alight-content 💚</p>
-        <span class="icon">•••</span>
+  <div class="header">
+    <img src="../src/img/palettes.png" alt="logo">
+    <p>Alignment alight-content ♥️</p>
+    <span class="icon">•••</span>
+  </div>
+
+  <div class="grid">
+    <div class="grid-container">
+      <div class="container">
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+      </div>
     </div>
 
-    <div class="grid">
-        <div class="grid-container">
-            <div class="container">
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-            </div>
-        </div>
-
-        <div class="grid-container">
-            <div class="container_two">
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-            </div>
-        </div>
-
-        <div class="grid-container">
-            <div class="container_three">
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-            </div>
-        </div>
-
-        <div class="grid-container">
-            <div class="container_four">
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-
-            </div>
-        </div>
-
-        <div class="grid-container">
-            <div class="container_five">
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-            </div>
-        </div>
-
-        <div class="grid-container">
-            <div class="container_six">
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-            </div>
-        </div>
-
-        <div class="grid-container">
-            <div class="container_seven">
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-            </div>
-        </div>
+    <div class="grid-container">
+      <div class="container_two">
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+      </div>
     </div>
+
+    <div class="grid-container">
+      <div class="container_three">
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+      </div>
+    </div>
+
+    <div class="grid-container">
+      <div class="container_four">
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+
+      </div>
+    </div>
+
+    <div class="grid-container">
+      <div class="container_five">
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+      </div>
+    </div>
+
+    <div class="grid-container">
+      <div class="container_six">
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+      </div>
+    </div>
+
+    <div class="grid-container">
+      <div class="container_seven">
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
