--- a/pages/auto-fill-fit.html
+++ b/pages/auto-fill-fit.html
@@ -2,74 +2,74 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/auto-fill-fit.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <title>Auto-fill vs auto-fit</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../css/auto-fill-fit.css">
+  <link rel="stylesheet" href="../css/header.css">
+  <title>Auto-fill vs auto-fit</title>
 </head>
 
 <body>
-    <div class="header">
-        <img src="../src/img/palettes.png" alt="logo">
-        <p>Auto-fill vs auto-fit 💚</p>
-        <span class="icon">•••</span>
+  <div class="header">
+    <img src="../src/img/palettes.png" alt="logo">
+    <p>Auto-fill vs auto-fit ♥️</p>
+    <span class="icon">•••</span>
+  </div>
+
+  <div class="container">
+    auto-fill
+    <div class="grid-container grid-container--fill">
+      <div class="grid-element">
+        1
+      </div>
+      <div class="grid-element">
+        2
+      </div>
+      <div class="grid-element">
+        3
+      </div>
+      <div class="grid-element">
+        4
+      </div>
+      <div class="grid-element">
+        5
+      </div>
+      <div class="grid-element">
+        6
+      </div>
+      <div class="grid-element">
+        7
+      </div>
     </div>
 
-    <div class="container">
-        auto-fill
-        <div class="grid-container grid-container--fill">
-            <div class="grid-element">
-                1
-            </div>
-            <div class="grid-element">
-                2
-            </div>
-            <div class="grid-element">
-                3
-            </div>
-            <div class="grid-element">
-                4
-            </div>
-            <div class="grid-element">
-                5
-            </div>
-            <div class="grid-element">
-                6
-            </div>
-            <div class="grid-element">
-                7
-            </div>
-        </div>
+    <hr>
 
-        <hr>
-
-        auto-fit
-        <div class="grid-container grid-container--fit">
-            <div class="grid-element">
-                1
-            </div>
-            <div class="grid-element">
-                2
-            </div>
-            <div class="grid-element">
-                3
-            </div>
-            <div class="grid-element">
-                4
-            </div>
-            <div class="grid-element">
-                5
-            </div>
-            <div class="grid-element">
-                6
-            </div>
-            <div class="grid-element">
-                7
-            </div>
-        </div>
+    auto-fit
+    <div class="grid-container grid-container--fit">
+      <div class="grid-element">
+        1
+      </div>
+      <div class="grid-element">
+        2
+      </div>
+      <div class="grid-element">
+        3
+      </div>
+      <div class="grid-element">
+        4
+      </div>
+      <div class="grid-element">
+        5
+      </div>
+      <div class="grid-element">
+        6
+      </div>
+      <div class="grid-element">
+        7
+      </div>
     </div>
+  </div>
 </body>
 
 </html>
