--- a/pages/content_item.html
+++ b/pages/content_item.html
@@ -2,30 +2,30 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/content_item.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <title>Parents and children</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../css/content_item.css">
+  <link rel="stylesheet" href="../css/header.css">
+  <title>Parents and children</title>
 </head>
 
 <body>
-    <div class="header">
-        <img src="../src/img/palettes.png" alt="logo">
-        <p>Parents and children 💚</p>
-        <span class="icon">•••</span>
-    </div>
+  <div class="header">
+    <img src="../src/img/palettes.png" alt="logo">
+    <p>Parents and children ♥️</p>
+    <span class="icon">•••</span>
+  </div>
 
-    <div class="container">
-        <div class="container_item">
-            <div class="item">
-                <div class="sub-item">
-                    💚
-                </div>
-            </div>
+  <div class="container">
+    <div class="container_item">
+      <div class="item">
+        <div class="sub-item">
+          ♥️
         </div>
+      </div>
     </div>
+  </div>
 </body>
 
 </html>
