--- a/pages/display.html
+++ b/pages/display.html
@@ -2,32 +2,32 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/display.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <title>Display grid or inline-grid</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../css/display.css">
+  <link rel="stylesheet" href="../css/header.css">
+  <title>Display grid or inline-grid</title>
 </head>
 
 <body>
-    <div class="header">
-        <img src="../src/img/palettes.png" alt="logo">
-        <p>Display grid or inline-grid 💚</p>
-        <span class="icon">•••</span>
-    </div>
+  <div class="header">
+    <img src="../src/img/palettes.png" alt="logo">
+    <p>Display grid or inline-grid ♥️</p>
+    <span class="icon">•••</span>
+  </div>
 
-    <div class="container">
-        <div class="block">Block</div>
-        <div class="grid">Grid</div>
-        <div class="flex">Flex</div>
+  <div class="container">
+    <div class="block">Block</div>
+    <div class="grid">Grid</div>
+    <div class="flex">Flex</div>
 
-        <br>
+    <br>
 
-        <div class="block_one">Block</div>
-        <div class="grid_two">Grid</div>
-        <div class="flex_three">Flex</div>
-    </div>
+    <div class="block_one">Block</div>
+    <div class="grid_two">Grid</div>
+    <div class="flex_three">Flex</div>
+  </div>
 
 </body>
 
