--- a/pages/flexbox.html
+++ b/pages/flexbox.html
@@ -14,7 +14,7 @@
 <body>
   <div class="header">
     <img src="../src/img/palettes.png" alt="logo">
-    <p>Flexbox 💚</p>
+    <p>Flexbox ♥️</p>
     <span class="icon">•••</span>
   </div>
 
