--- a/pages/grid_margin.html
+++ b/pages/grid_margin.html
@@ -8,13 +8,13 @@
   <link rel="stylesheet" href="../css/style_margin.css">
   <link rel="stylesheet" href="../css/header.css">
   <link rel="stylesheet" href="../css/media_queries.css">
-  <title>Alignment techniques</title>
+  <title>Margin</title>
 </head>
 
 <body>
   <div class="header">
     <img src="../src/img/palettes.png" alt="logo">
-    <p>Margin 💚</p>
+    <p>Margin ♥️</p>
     <span class="icon">•••</span>
   </div>
 
