--- a/pages/line-height.html
+++ b/pages/line-height.html
@@ -8,13 +8,13 @@
   <link rel="stylesheet" href="../css/style-line-height.css">
   <link rel="stylesheet" href="../css/header.css">
   <link rel="stylesheet" href="../css/line-height_mq.css">
-  <title>Alignment techniques</title>
+  <title>Line-height</title>
 </head>
 
 <body>
   <div class="header">
     <img src="../src/img/palettes.png" alt="logo">
-    <p>Line-height 💚</p>
+    <p>Line-height ♥️</p>
     <span class="icon">•••</span>
   </div>
 
