--- a/pages/minmax.html
+++ b/pages/minmax.html
@@ -2,49 +2,49 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/minmax.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../css/minmax.css">
+  <link rel="stylesheet" href="../css/header.css">
+  <title>Function</title>
 </head>
 
 <body>
-    <div class="header">
-        <img src="../src/img/palettes.png" alt="logo">
-        <p>Function 💚</p>
-        <span class="icon">•••</span>
+  <div class="header">
+    <img src="../src/img/palettes.png" alt="logo">
+    <p>Function ♥️</p>
+    <span class="icon">•••</span>
+  </div>
+
+  <div class="container_main">
+    Repeat()
+    <div class="container">
+      <div class="item"></div>
+      <div class="item"></div>
+      <div class="item"></div>
+      <div class="item"></div>
+      <div class="item"></div>
     </div>
 
-    <div class="container_main">
-        Repeat()
-        <div class="container">
-            <div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>
-        </div>
-
-        <br>
-        Minmax()
-        <div class="container_two">
-            <div class="item-two"></div>
-            <div class="item-two"></div>
-            <div class="item-two"></div>
-            <div class="item-two"></div>
-            <div class="item-two"></div>
-        </div>
-
-        <br>
-        Fit-content()
-        <div class="container_three">
-            <div class="item-three"></div>
-            <div class="item-three">Fit-content()</div>
-            <div class="item-three"></div>
-        </div>
+    <br>
+    Minmax()
+    <div class="container_two">
+      <div class="item-two"></div>
+      <div class="item-two"></div>
+      <div class="item-two"></div>
+      <div class="item-two"></div>
+      <div class="item-two"></div>
     </div>
+
+    <br>
+    Fit-content()
+    <div class="container_three">
+      <div class="item-three"></div>
+      <div class="item-three">Fit-content()</div>
+      <div class="item-three"></div>
+    </div>
+  </div>
 </body>
 
 </html>
