--- a/pages/table-cell.html
+++ b/pages/table-cell.html
@@ -8,13 +8,13 @@
   <link rel="stylesheet" href="../css/style_tableCell.css">
   <link rel="stylesheet" href="../css/table-cell_mq.css">
   <link rel="stylesheet" href="../css/header.css">
-  <title>Alignment techniques</title>
+  <title>Table cell</title>
 </head>
 
 <body>
   <div class="header">
     <img src="../src/img/palettes.png" alt="logo">
-    <p>Table cell 💚</p>
+    <p>Table cell ♥️</p>
     <span class="icon">•••</span>
   </div>
 
