--- a/pages/column-rows.html
+++ b/pages/column-rows.html
@@ -13,7 +13,7 @@
 <body>
   <div class="header">
     <img src="../src/img/palettes.png" alt="logo">
-    <p>Columns and rows 💚</p>
+    <p>Columns and rows ♥️</p>
     <span class="icon">•••</span>
   </div>
 
