--- a/pages/modes_challenge.html
+++ b/pages/modes_challenge.html
@@ -8,13 +8,13 @@
   <link rel="stylesheet" href="../css/mode_challenge.css">
   <link rel="stylesheet" href="../css/mode_challenge_mq.css">
   <link rel="stylesheet" href="../css/header.css">
-  <title>Alignment techniques</title>
+  <title>Writing modes challeng</title>
 </head>
 
 <body>
   <div class="header">
     <img src="../src/img/palettes.png" alt="logo">
-    <p>Writing modes challeng 💚</p>
+    <p>Writing modes challeng ♥️</p>
     <span class="icon">•••</span>
   </div>
 
