--- a/pages/place-self.html
+++ b/pages/place-self.html
@@ -13,7 +13,7 @@
 <body>
   <div class="header">
     <img src="../src/img/palettes.png" alt="logo">
-    <p>Alignment place-self 💚</p>
+    <p>Alignment place-self ♥️</p>
     <span class="icon">•••</span>
   </div>
 
