--- a/pages/positions.html
+++ b/pages/positions.html
@@ -7,13 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/style_position.css">
   <link rel="stylesheet" href="../css/header.css">
-  <title>Alignment techniques</title>
+  <title>Positions</title>
 </head>
 
 <body>
   <div class="header">
     <img src="../src/img/palettes.png" alt="logo">
-    <p>Positions 💚</p>
+    <p>Positions ♥️</p>
     <span class="icon">•••</span>
   </div>
 
