--- a/pages/quiz-place-content.html
+++ b/pages/quiz-place-content.html
@@ -2,26 +2,26 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/quiz-place-content.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <title>Quiz Place Content</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../css/quiz-place-content.css">
+  <link rel="stylesheet" href="../css/header.css">
+  <title>Quiz Place Content</title>
 </head>
 
 <body>
-    <div class="header">
-        <img src="../src/img/palettes.png" alt="logo">
-        <p>Quiz Place Content 💚</p>
-        <span class="icon">•••</span>
-    </div>
+  <div class="header">
+    <img src="../src/img/palettes.png" alt="logo">
+    <p>Quiz Place Content ♥️</p>
+    <span class="icon">•••</span>
+  </div>
 
-    <div class="container">
-        <div class="container_item">
-            <div class="item"></div>
-        </div>
+  <div class="container">
+    <div class="container_item">
+      <div class="item"></div>
     </div>
+  </div>
 </body>
 
 </html>
