--- a/pages/tracks.html
+++ b/pages/tracks.html
@@ -13,7 +13,7 @@
 <body>
   <div class="header">
     <img src="../src/img/palettes.png" alt="logo">
-    <p>Tracks 💚</p>
+    <p>Tracks ♥️</p>
     <span class="icon">•••</span>
   </div>
 
