--- a/pages/flexbox.html
+++ b/pages/flexbox.html
@@ -20,39 +20,39 @@
 
   <div class="wrapper-content">
     <div class="wrapper">
-      <div class="container">
+      <div class="container container-one">
         <div class="element element-one">top left</div>
       </div>
 
-      <div class="container">
+      <div class="container container-one">
         <div class="element element-one">center left</div>
       </div>
 
-      <div class="container">
+      <div class="container container-one">
         <div class="element element-one">bottom left</div>
       </div>
 
-      <div class="container">
+      <div class="container container-two">
         <div class="element element-two">top center</div>
       </div>
 
-      <div class="container">
+      <div class="container container-two">
         <div class="element element-two">center center</div>
       </div>
 
-      <div class="container">
+      <div class="container container-two">
         <div class="element element-two">bottom center</div>
       </div>
 
-      <div class="container">
+      <div class="container container-three">
         <div class="element element-three">top right</div>
       </div>
 
-      <div class="container">
+      <div class="container container-three">
         <div class="element element-three">center right</div>
       </div>
 
-      <div class="container">
+      <div class="container container-three">
         <div class="element element-three">bottom right</div>
       </div>
     </div>
