--- a/pages/grid_margin.html
+++ b/pages/grid_margin.html
@@ -21,39 +21,39 @@
   <!-- Margin start -->
   <div class="wrapper-content">
     <div class="wrapper-start">
-      <div class="container-margin-start">
+      <div class="container-margin-start container-one">
         <div class="element element-one-margin-start">top left</div>
       </div>
 
-      <div class="container-margin-start">
+      <div class="container-margin-start container-one">
         <div class="element element-two-margin-start">center left</div>
       </div>
 
-      <div class="container-margin-start">
+      <div class="container-margin-start container-one">
         <div class="element element-three-margin-start">bottom left</div>
       </div>
 
-      <div class="container-margin-start">
+      <div class="container-margin-start container-two">
         <div class="element element-four-margin-start">top center</div>
       </div>
 
-      <div class="container-margin-start">
+      <div class="container-margin-start container-two">
         <div class="element element-five-margin-start">center center</div>
       </div>
 
-      <div class="container-margin-start">
+      <div class="container-margin-start container-two">
         <div class="element element-six-margin-start">bottom center</div>
       </div>
 
-      <div class="container-margin-start">
+      <div class="container-margin-start container-three">
         <div class="element element-seven-margin-start">top right</div>
       </div>
 
-      <div class="container-margin-start">
+      <div class="container-margin-start container-three">
         <div class="element element-eight-margin-start">center right</div>
       </div>
 
-      <div class="container-margin-start">
+      <div class="container-margin-start container-three">
         <div class="element element-nine-margin-start">bottom right</div>
       </div>
     </div>
