--- a/pages/positions.html
+++ b/pages/positions.html
@@ -20,39 +20,39 @@
   <!-- Position -->
   <div class="wrapper-content">
     <div class="wrapper">
-      <div class="container-position">
+      <div class="container-position container-one">
         <div class="element element-position-1">top left</div>
       </div>
 
-      <div class="container-position">
+      <div class="container-position container-one">
         <div class="element element-position-2">center left</div>
       </div>
 
-      <div class="container-position">
+      <div class="container-position container-one">
         <div class="element element-position-3">bottom left</div>
       </div>
 
-      <div class="container-position">
+      <div class="container-position container-two">
         <div class="element element-position-4">top center</div>
       </div>
 
-      <div class="container-position">
+      <div class="container-position container-two">
         <div class="element element-position-5">center center</div>
       </div>
 
-      <div class="container-position">
+      <div class="container-position container-two">
         <div class="element element-position-6">bottom center</div>
       </div>
 
-      <div class="container-position">
+      <div class="container-position container-three">
         <div class="element element-position-7">top right</div>
       </div>
 
-      <div class="container-position">
+      <div class="container-position container-three">
         <div class="element element-position-8">center right</div>
       </div>
 
-      <div class="container-position">
+      <div class="container-position container-three">
         <div class="element element-position-9">bottom right</div>
       </div>
     </div>
