feat: add a link to the image to return to main menu

--- a/pages/align-self.html
+++ b/pages/align-self.html
@@ -12,7 +12,10 @@
 
 <body>
   <div class="header">
-    <img src="../src/img/palettes.png" alt="logo">
+    <a href="../index.html">
+      <img src="../src/img/palettes.png" alt="logo">
+    </a>
+
     <p>Alignment align-self ♥️</p>
     <span class="icon">•••</span>
   </div>
