--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 
 <body>
   <div class="header">
-    <img src="src/img/palettes.png" alt="logo">
+    <a href="../index.html">
+      <img src="src/img/palettes.png" alt="logo">
+    </a>
+
     <p>Técnicas de alineamiento ♥️</p>
     <span class="icon">•••</span>
   </div>
