--- a/pages/flexbox.html
+++ b/pages/flexbox.html
@@ -13,7 +13,10 @@
 
 <body>
   <div class="header">
-    <img src="../src/img/palettes.png" alt="logo">
+    <a href="../index.html">
+      <img src="../src/img/palettes.png" alt="logo">
+    </a>
+
     <p>Flexbox ♥️</p>
     <span class="icon">•••</span>
   </div>
