--- a/pages/location.html
+++ b/pages/location.html
@@ -12,7 +12,10 @@
 
 <body>
   <div class="header">
-    <img src="../src/img/palettes.png" alt="logo">
+    <a href="../index.html">
+      <img src="../src/img/palettes.png" alt="logo">
+    </a>
+
     <p>Location ♥️</p>
     <span class="icon">•••</span>
   </div>
