--- a/pages/table-cell.html
+++ b/pages/table-cell.html
@@ -13,7 +13,10 @@
 
 <body>
   <div class="header">
-    <img src="../src/img/palettes.png" alt="logo">
+    <a href="../index.html">
+      <img src="../src/img/palettes.png" alt="logo">
+    </a>
+
     <p>Table cell ♥️</p>
     <span class="icon">•••</span>
   </div>
