feat: add a font and center the button text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style_margin.css">
   <link rel="stylesheet" href="./css/main-menu.css">
-
   <link rel="stylesheet" href="./css/header.css">
   <title>Técnicas de alineamiento</title>
 </head>
@@ -15,7 +14,7 @@
 <body>
   <div class="header">
     <a href="../index.html">
-      <img src="src/img/palettes.png" alt="logo">
+      <img src="src/img/palettes.png" alt="logo" />
     </a>
 
     <p>Técnicas de alineamiento ♥️</p>
@@ -23,85 +22,79 @@
   </div>
 
   <div class="container_menu">
-    <form action="./pages/grid_margin.html">
-      <input class="button_submit" type="submit" value="Margin" />
-    </form>
+    <a href="./pages/grid_margin.html" class="button_submit">
+      Margin
+    </a>
 
-    <form action="./pages/line-height.html">
-      <input class="button_submit" type="submit" value="Line-height" />
-    </form>
+    <a href="./pages/line-height.html" class="button_submit">
+      Line-height
+    </a>
 
-    <form action="./pages/table-cell.html">
-      <input class="button_submit" type="submit" value="Table cell" />
-    </form>
+    <a href="./pages/table-cell.html" class="button_submit">
+      Table cell
+    </a>
 
-    <form action="./pages/positions.html">
-      <input class="button_submit" type="submit" value="Positions" />
-    </form>
+    <a href="./pages/positions.html" class="button_submit">
+      Positions
+    </a>
 
-    <form action="./pages/modes_challenge.html">
-      <input class="button_submit" type="submit" value="Writing modes challenge" />
-    </form>
+    <a href="./pages/modes_challenge.html" class="button_submit">
+      Writing modes
+    </a>
 
-    <form action="./pages/flexbox.html">
-      <input class="button_submit" type="submit" value="Flexbox" />
-    </form>
+    <a href="./pages/flexbox.html" class="button_submit"> Flexbox </a>
 
-    <form action="./pages/content_item.html">
-      <input class="button_submit" type="submit" value="Immediate parents & children">
-    </form>
+    <a href="./pages/content_item.html" class="button_submit">
+      Parents & children
+    </a>
 
-    <form action="./pages/display.html">
-      <input class="button_submit" type="submit" value="Display grid or inline-grid">
-    </form>
+    <a href="./pages/display.html" class="button_submit">
+      Grid or inline-grid
+    </a>
 
-    <form action="./pages/column-rows.html">
-      <input class="button_submit" type="submit" value="Columns and rows">
-    </form>
+    <a href="./pages/column-rows.html" class="button_submit">
+      Columns and rows
+    </a>
 
-    <form action="./pages/justify-content.html">
-      <input class="button_submit" type="submit" value="Justify-content">
-    </form>
+    <a href="./pages/justify-content.html" class="button_submit">
+      Justify-content
+    </a>
 
-    <form action="./pages/align-content.html">
-      <input class="button_submit" type="submit" value="Align-content">
-    </form>
+    <a href="./pages/align-content.html" class="button_submit button">
+      Align-content
+    </a>
 
-    <form action="./pages/quiz-place-content.html">
-      <input class="button_submit" type="submit" value="Place-content">
-    </form>
+    <a href="./pages/quiz-place-content.html" class="button_submit">
+      Place-content
+    </a>
 
-    <form action="./pages/location.html">
-      <input class="button_submit" type="submit" value="Location">
-    </form>
+    <a href="./pages/location.html" class="button_submit">
+      Location
+    </a>
 
-    <form action="./pages/minmax.html">
-      <input class="button_submit" type="submit" value="Function">
-    </form>
+    <a href="./pages/minmax.html" class="button_submit"> Function </a>
 
-    <form action="./pages/main-grid.html">
-      <input class="button_submit" type="submit" value="Main grid">
-    </form>
+    <a href="./pages/main-grid.html" class="button_submit">
+      Main grid
+    </a>
 
-    <form action="./pages/auto-fill-fit.html">
-      <input class="button_submit" type="submit" value="Auto-fill vs auto-fit">
-    </form>
+    <a href="./pages/auto-fill-fit.html" class="button_submit">
+      Auto-fill vs auto-fit
+    </a>
 
-    <form action="./pages/tracks.html">
-      <input class="button_submit" type="submit" value="Tracks">
-    </form>
+    <a href="./pages/tracks.html" class="button_submit"> Tracks </a>
 
-    <form action="./pages/justify-self.html">
-      <input class="button_submit" type="submit" value="Alignment justify-self">
-    </form>
+    <a href="./pages/justify-self.html" class="button_submit">
+      Alignment justify-self
+    </a>
 
-    <form action="./pages/align-self.html">
-      <input class="button_submit" type="submit" value="Alignment align-self">
-    </form>
+    <a href="./pages/align-self.html" class="button_submit">
+      Alignment align-self
+    </a>
 
-    <form action="./pages/place-self.html">
-      <input class="button_submit" type="submit" value="Alignment place-self">
-    </form>
+    <a href="./pages/place-self.html" class="button_submit">
+      Alignment place-self
+    </a>
   </div>
 </body>
 
